syntax = "proto3";

package ai.lzy.v1.portal;

import "ai/lzy/v1/common/s3.proto";
import "ai/lzy/v1/common/slot.proto";

option java_outer_classname = "LzyPortal";
option java_package = "ai.lzy.v1.portal";

message PortalSlotDesc {
  SlotSpec slot = 1;

  message Snapshot {
    // external s3 storage
    S3Locator s3 = 1;

    /* optional */ WhiteboardRef whiteboardRef = 2;  // Whiteboard field to link data to

    message WhiteboardRef {
      string whiteboardId = 1;
      string fieldName = 2;
    }

    // TODO:
    //  - support kafka (streaming)
  }

  message StdOut {
    string taskId = 1;
  }

  message StdErr {
    string taskId = 1;
  }

  oneof kind {
    // snapshot slot to save into external (persistent) and internal volatile portal storage
    Snapshot snapshot = 10;
    // stdout/stderr of tasks (will be combined and transferred to portal stdout/stderr slots)
    StdOut stdout = 11;
    StdErr stderr = 12;
  }
}
